sidenav on mobile fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,10 @@
 .app-content {
   min-height: 100%;
 
+  .sidenav {
+    background-color: $colorGrey;
+  }
+
   .loading {
     width: 100%;
     //margin-top: -4px;
